css/style.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  background-color: #fff;
  color: #000;
  font-size: 15px;
  line-height: 1.5;
}

a {
  color: #262626;
  text-decoration: none;
}

ul {
  list-style: none;
}

.container {
  width: 90%;
  max-width: 1100px;
  margin: auto;
}

/* Nav */
.main-nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
  height: 60px;
  padding: 20px 0;
  font-size: 13px;
}

.main-nav .logo {
  width: 110px;
}

.main-nav ul {
  display: flex;
}

.main-nav ul li {
  padding: 0 10px;
}

.main-nav ul li a {
  padding-bottom: 2px;
}

.main-nav ul li a:hover {
  border-bottom: 2px solid #262626;
}

.main-nav ul.main-menu {
  flex: 1;
  margin-left: 20px;
}

.btn {
  cursor: pointer;
  display: inline-block;
  border: 0;
  font-weight: bold;
  padding: 10px 20px;
  background: #262626;
  color: #fff;
  font-size: 15px;
}

.btn:hover {
  opacity: 0.9;
}

/* Showcase */
.showcase {
  width: 100%;
  height: 500px;
  background: url('../images/begur_denim_bolsa.jpg') no-repeat center center/cover;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  justify-content: flex-end;
  padding-bottom: 50px;
  margin-bottom: 20px;
}

.showcase h2, .showcase p {
  width: 40%;
  padding: 0 0 10px 30px;
  color: #fff;
  margin-bottom: 0;
  background: rgba(0, 0, 0, 0.5);
}

.showcase .btn {
  margin-top: 20px;
}

/* Home cards */
.home-cards {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-gap: 20px;
  margin-bottom: 40px;
}

.home-cards img {
  width: 100%;
  margin-bottom: 20px;
}

.home-cards h3 {
  margin-bottom: 5px;
}

.home-cards a {
  display: inline-block;
  padding-top: 10px;
  color: #0067b8;
  text-transform: uppercase;
  font-weight: bold;
}

.home-cards a:hover {
  margin-left: 10px;
}

/* Product */
.product {
  height: 400px;
  width: 100%;
  background: url('../images/begur_denim_rock_water.jpg') no-repeat center center/cover;
  margin-bottom: 20px;
}

.product .content {
  width: 40%;
  padding: 50px 0 0 30px;
}

.product h2 {
  padding: 10px 10px 20px;
  color: #fff;
  background: rgba(0, 0, 0, 0.3);
}

.product p {
  padding: 10px 10px 20px;
  margin: 0;
  color: #fff;
  background: rgba(0, 0, 0, 0.3);
}

/* Poolside */
.poolside {
  height: 500px;
  width: 100%;
  background: url('../images/cadaques_denim_poolside copy.jpg') no-repeat center center/cover;
  margin-bottom: 20px;
}

.poolside .content {
  width: 40%;
  padding: 50px 0 0 30px;
}

.poolside h2 {
  padding: 10px 10px 20px;
  color: #fff;
  background: rgba(0, 0, 0, 0.3);
}

.poolside p {
  padding: 10px 10px 20px;
  margin: 0;
  color: #fff;
  background: rgba(0, 0, 0, 0.3);
}

/* Social */
.social {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  margin: 30px 0 30px;
}

.social * {
  margin-right: 10px;
}

/* Footer */
.footer {
  background: #f2f2f2;
  color: #616161;
  font-size: 12px;
  padding: 20px 0;
}

.footer-inner {
  max-width: 1100px;
  margin: 0 auto;
  padding: 0 20px 0 20px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.footer ul {
  display: flex;
  flex-wrap: wrap;
}

.footer li {
  margin-right: 30px;
  margin-bottom: 20px;
}

@media(max-width: 700px) {
  .product .content p {
    display: none;
  }

  .product .content h2 {
    margin-bottom: 20px;
  }
}

@media(max-width: 500px) {
  .home-cards {
    grid-template-columns: 1fr;
  }

  .home-cards div {
    text-align: center;
  }

  .home-cards img {
    display: block;
    width: 50%;
    margin: auto;
  }

  .product .content {
    width: 85%;
  }
}

